<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/>
	</parent>

	<groupId>com.commerce.platform</groupId>
	<artifactId>commerce-platform</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>common</module>
		<module>order-service</module>
		<module>infrastructure</module>
	</modules>

	<properties>
		<java.version>21</java.version>
		<lombok.version>1.18.32</lombok.version>
		<mysql.version>9.3.0</mysql.version>
		<spring-kafka.version>3.3.8</spring-kafka.version>
		<kafka-avro-serializer.version>7.6.1</kafka-avro-serializer.version>
		<avro.version>1.12.0</avro.version>
		<commons-lang3.version>3.18.0</commons-lang3.version>
		<springdoc-openapi.version>2.8.9</springdoc-openapi.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>common-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>common-dataaccess</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>common-domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>order-domain-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>order-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>order-application-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>order-dataaccess</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>order-messaging</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>saga</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>outbox</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>kafka-producer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>kafka-consumer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>kafka-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.commerce.platform</groupId>
				<artifactId>kafka-config-data</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.mysql</groupId>
				<artifactId>mysql-connector-j</artifactId>
				<version>${mysql.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
		</dependency>
	</dependencies>
</project>
